# codec-amr

./: CMakeLists.txt  Doxyfile  README.md  library.properties
docs/html/: AMRCodec_8h_source.html  AMRNB_8h_source.html  AMRWB_8h_source.html  CodecAMR_8h.html  CodecAMR_8h__incl.map  CodecAMR_8h__incl.md5  CodecAMR_8h_source.html  amr__config_8h_source.html  annotated.html  classAMRCodec-members.html  classAMRCodec.html  classAMRCodec__inherit__graph.map  classAMRCodec__inherit__graph.md5  classAMRNB-members.html  classAMRNB.html  classAMRNB__inherit__graph.map  classAMRNB__inherit__graph.md5  classAMRWB-members.html  classAMRWB.html  classAMRWB__coll__graph.map  classAMRWB__coll__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_enum.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  md_README.html  pages.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js
examples/AMRCodecExample/: AMRCodecExample.ino  CMakeLists.txt  main.cpp
src/: AMRCodec.h  AMRNB.h  AMRWB.h  CodecAMR.h  amr_config.h
src/main/: CMakeLists.txt  nb-decoder.c  nb-encoder.c  wb-decoder.c  wb-encoder.c
src/nb/: interf_dec.c  interf_enc.c  interf_enc.h  sp_dec.c  sp_dec.h  sp_enc.c  sp_enc.h
src/wb/: dec_lpc.c  enc_acelp.c  enc_if.c  enc_main.c
